[package]
name = "solana-web3-sys"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/solana-kaizen/solana-web3-sys"

[features]
default = ["init"]
init = []

[dependencies]
cfg-if = "1.0.0"
js-sys = "0.3.61"
solana-program = "1.15.1"
thiserror = "1.0.38"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"