[package]
name = "solana-web3-sys"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/solana-kaizen/solana-web3-sys"
keywords = ["wasm","solana","web3"]
categories = ["wasm"]
description = "Rust `wasm_bindgen` bindings for Solana `web3.js` API"

[features]
default = ["init"]
init = []

[dependencies]
cfg-if = "1.0.0"
js-sys = "0.3.61"
solana-program = "1.15.1"
solana-sdk = "1.15.1"
bs58= "0.4.0"
base64 = "0.13.0"
thiserror = "1.0.38"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
# workflow-log = {path="../workflow-rs/log"}
workflow-log = "0.3.12"